# gc_lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  notes.md  todo.txt
cmake/: GCLibConfig.cmake.in
include/: gc_common.h  gc_dyn_array.h  gc_filesystem.h  gc_hash_table.h  gc_lib.h  gc_logger.h  gc_rb_tree.h  gc_string_builder.h  gc_string_view.h  gc_time.h  gc_types.h  library.h
include/math/: gc_vec.h
src/: gc_logger.c  gc_rb_tree.c  library.c
src/math/: gc_vec.c
tests/: CMakeLists.txt  dyn_array_test.c  hash_test.c  main_test.c  rb_tree_test.c  string_builder_test.c  test_hello.c
tests/assets/: shakespeare_smol.txt  shakespeare_smol_double.txt
